src/stylesheets/_navbar.scss
@import "compass/typography/lists/horizontal-list";

$navbar_blue: #000099;

@mixin border-right {
  border-right: 1px solid white; }

@mixin menu {
  & > ul {
    display: none; }
  &:hover > ul {
    background-color: white;
    position: absolute;
    border: 1px solid $navbar_blue;
    display: block;
    padding-left: 0px;
    & > li li {
      font-size: 90%; } }
  ul {
    @include no-bullet;
    text-align: left;
    font-weight: normal; }
  li ul {
    padding-left: 1.5em; } }

$unit: 40px;

#navbar {
  min-height: 54px;
  background: {
    image: url("/images/navbar/navbar-bg.png");
    repeat: repeat-x; };
  #logo {
    width: $unit * 4;
    float: left; }
  #logo-small {
    width: $unit * 6;
    float: left;
    @include border-right; }
  & > ul {
    @include horizontal-list-container;
    & > li {
      @include horizontal-list-item(0px);
      padding: {
        top: 18px; };
      @include border-right;
      height: 36px;
      text-align: center;
      width: $unit * 2;
      &#nav-about, &#nav-webdesign, &#nav-funstuff, &#nav-contact {
        width: $unit * 3; }
      & > a {
        background-color: $navbar_blue;
        color: white; } } } }

#nav-about, #nav-funstuff {
  @include menu; }

.pdf {
  @include icon("/images/pdf-icon-16x16.png", 16px, 16px, 2px); }

